# fcs

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: 00-README.md  01-Overview.md  02-Principles.md  03-Money.md  04-Arithmetic-and-Allocation.md  04-Rounding.md  05-Rounding.md  05-Tax.md  06-Correction.md  06-Temporal-Semantics.md  07-Policy-and-Versioning.md  07-Reference-Contracts.md  08-Compliance-Test.md  08-Tax.md  09-Correction.md  09-FFI-Plan.md  12-Reference-Contracts.md  13-Compliance-Test.md  14-FFI-Plan.md  24-Document-Map.md  25-Implementation-Governance.md
fcs-core/: Cargo.toml
fcs-core/benches/: fixed_point_vs_float.rs
fcs-core/src/: error.rs  fixed_point.rs  lib.rs
fcs-core/src/fixed_point/: division.rs  helper.rs  mod.rs  multiplication.rs  tests.rs
fcs-core/src/fixed_point/helper/: mod.rs  tests.rs
fcs-core/src/fixed_point/rounding/: mod.rs  tests.rs
