[workspace]
resolver = "3"
members = ["fcs-core"]

[workspace.package]
authors = ["gho1b <anggit.dev@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Financial Computation Standard Kernel"
repository = "https://github.com/gho1b/fcs"
readme = "README.md"

[workspace.dependencies]
fcs-core = { path = "fcs-core" }

thiserror = "2.0.18"
