[workspace]
resolver = "3"
members = ["fcs-core"]

[workspace.package]
authors = ["gho1b <anggit.dev@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Financial Computation Standard Kernel"
repository = "https://github.com/gho1b/fcs"
readme = "README.md"

[workspace.dependencies]
fcs-core = { path = "fcs-core" }

thiserror = "2.0.18"
rayon = "1.12.0"
serde = "1.0.228"
serde_json = "1.0.149"
plotters = "0.3.7"
dashmap = "6.1.0"
log = "0.4.29"
tracing = "0.1.44"
opentelemetry = "0.31.0"
criterion = "0.8.2"
criterion-plot = "0.8.2"
