[package]
name = "fcs-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
thiserror = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
criterion-plot = { workspace = true }
rust_decimal = "1.41.0"

[[bench]]
name = "fixed_point_vs_float"
harness = false
